tests/sksl/errors/Ossfuzz31469.dsl.glsl
### Compilation failed:

error: function 'n' can exit without returning a value

1 error
